# BarrelEmerge

./: CMakeLists.txt  README.md
analysis/: README.md  add_cross.m  hondadelta.py  load.py  logistic.m  multirun_stats.py  plot.py  plot1.py  plot2.py  plot3.py  plotBarrelMap.py  plot_FigSensitivity.py  plot_a.py  plot_a_c_vs_t.py  plot_a_only.py  plot_aid.py  plot_aid_all.py  plot_bg.m  plot_cid.py  plot_cid_all.py  plot_cid_fgfmis.py  plot_cid_fgfmis_all.py  plot_gamma_noise.py  plot_guidance.py  plot_guidance_noise.py  plot_honda.py  plot_honda_quick.py  plot_locn.py  plot_locn_all.py  plot_mapwithexpt.py  plot_paramsearch.py  plot_paramsearch_comp2.py  plot_paramsearch_comp2_linmax.py  plot_paramsearch_comp2_narrower.py  plot_paramsearch_dncomp.py  plot_paramsearch_paper.py  plot_sensitivity_gamma.py  plot_sensitivity_guide1.py  plot_singlemap.py  plot_surface.py  (+28 more)
analysis/include/: BarrelData.py  Surface.py  domcentres.py  load.py  paramplot.py  plot.py
analysis/old/: plot1.py  plot_gamma_noise.py  plot_guidance_noise.py  plot_paramsearch_comp2_linmax.py  plot_paramsearch_dncomp.py  plot_sensitivity_guide1.py  plot_trim.py  plotdat.m  process_paramsearch_comp2.py  rel_guide_strengths.py  rel_guide_strengths_edge.py  rel_guide_strengths_slide.py  voronoi_vs_epsilon.py  whisker_to_colour_map.ods
analysis/plots/: forcounting.odt
analysis/postproc/: a_vs_t.npy  adjacency.npy  adjacency_arrangement.npy  adjacency_differencemag.npy  area_diff.npy  area_measure.npy  c_vs_t.npy  gamma_noise.csv  guidance_noise.csv  honda_delta.npy  honda_t.npy  locn_vs_t.npy  map_diff.npy  paramsearch_k1.0_dncomp.csv  paramsearch_k3.0_comp2.csv  paramsearch_k3.0_comp2_linmax.csv  paramsearch_k3.0_comp2_sigmoid.csv  paramsearch_k3_comp2.csv  paramsearch_k3_dncomp.csv  sensitivity_gammas.csv  sensitivity_guide1.csv  sos_dist.npy  whisker_rowtrim_individual.csv  whisker_rowtrim_overall.csv  whisker_trim_individual.csv  whisker_trim_overall.csv
boundaries/: barreloids_haidarliu.csv  barreloids_haidarliu.dig  barreloids_haidarliu.py  barreloids_haidarliu_Fig5d.csv  barreloids_haidarliu_Fig5d.dig  barreloids_haidarliu_Fig5d.py  barreloids_haidarliu_Fig5d_boundary.csv  barreloids_vanderloos_dia_only.csv  whiskers_vanderloos.csv
boundaries/barreloids/: barreloids_haidarliu.py  barreloids_haidarliu_Fig5d.csv  barreloids_haidarliu_Fig5d.dig  barreloids_haidarliu_Fig5d.py  barreloids_haidarliu_boundary_ordered.csv  barreloids_vanderloos.py
boundaries/facial_whiskers/: whiskers_vanderloos.dig  whiskers_vanderloos.py
boundaries/rat_barrels/: .gitignore  results.ods
configs/: .gitignore  25N2M_rect_1.json  25N2M_rect_1_delayedGuide.json  25N2M_rect_2.json  25N2M_rect_2_morecomp.json  25N2M_rect_2_squatter.json  25N2M_square.json  25N2M_square_posonly.json  25N2M_withcomp_realmap.json  36M2M_realmap.json  36N2M_realmap.json  36N2M_realmap_zerocomp.json  36N4M_realmap.json  41N2M_thalguide.json  51N2M_realmap.json  52N2M_thalguide.json  52N2M_thalguide_areas.json  52N2M_thalguide_areas_log.json  52N2M_thalguide_fgfdup.json  52N2M_thalguide_fgfdup_logis.json  52N2M_thalguide_fordual.json  karb.json
configs/mouse/: 52N2M_thalguide.json  52N2M_thalguide_explorealphabeta.json  52N2M_thalguide_exploreepsilon.json  52N2M_thalguide_explorelogisitic.json  52N2M_thalguide_hondadelta.json  52N2M_thalguide_logistic.json
configs/old/: 36N2M_realmap_diff_compete.json  51N2M_realmap_start.json
configs/rat/: 41N2M_thalguide.json  41N2M_thalguide_3d.json  41N2M_thalguide_DualMirror.json  41N2M_thalguide_Fig1.json  41N2M_thalguide_Fig3.json  41N2M_thalguide_Fig3Bi_Movie.json  41N2M_thalguide_Fig3Bii_Movie.json  41N2M_thalguide_Fig3Biii_Movie.json  41N2M_thalguide_Fig3Biv_Movie.json  41N2M_thalguide_Fig4.json  41N2M_thalguide_Fig4ab.json  41N2M_thalguide_Fig4ab_Movie.json  41N2M_thalguide_Fig4cd.json  41N2M_thalguide_Fig5.json  41N2M_thalguide_Movie.json  41N2M_thalguide_RowTrim.json  41N2M_thalguide_anoise.json  41N2M_thalguide_anoiseless.json  41N2M_thalguide_eps050.json  41N2M_thalguide_eps100.json  41N2M_thalguide_eps10_FgfMis.json  41N2M_thalguide_eps120_FgfMis.json  41N2M_thalguide_eps150.json  41N2M_thalguide_eps150_FgfMis.json  41N2M_thalguide_eps150_fordual.json  41N2M_thalguide_eps150_movie.json  41N2M_thalguide_eps200.json  41N2M_thalguide_eps20_FgfMis.json  41N2M_thalguide_eps300.json  41N2M_thalguide_eps400.json  41N2M_thalguide_eps40_FgfMis.json  41N2M_thalguide_eps60_FgfMis.json  41N2M_thalguide_eps60_fordual.json  41N2M_thalguide_eps80_FgfMis.json  41N2M_thalguide_longtime.json  testcomp2.json
configs/rectangles/: 1N1M.json  25N2M_square.json  25N2M_square_delayedOnset.json
logs/: .gitignore  README.md
misc/: movie.sh  movie2.sh  movie_reduce.sh
paper/: .gitignore  BarrelEmerge.bib  README.md  Sfn2019.odp  barrel_equations.sh  barrel_equations.tex  bibfile.bib  paper.tex  poster_equations.sh  poster_equations.tex
paper/Fig_25N2M_square/: params.json
paper/briefpaper/: .gitignore  BarrelsDigest.docx  BarrelsResponse.docx  Fig1.tiff  Fig2.tiff  Fig3.tiff  Fig4.tiff  README.md  barrels_proof.tex  barrels_review.tex  brief.sh  brief.tex  brief_authors.sh  brief_pp.sh  brief_pp.tex  brief_proof.sh  brief_review.sh  elife_review.txt  impact.txt  pnas-notpnas.cls  preprint.diff  (+2 more)
scripts/: README.md  gamma_noise.sh  guidance_noise.sh  main_results.sh  multirun_anoise.sh  multirun_anoiseless.sh  multirun_comp2.sh  paramexplore.sh  paramexplore_comp2.sh  paramexplore_comp2_linmax.sh  rel_guide_strengths_r1.sh  rel_guide_strengths_r2.sh  rel_guide_strengths_sq.sh  sensitivity_comp2.sh  sensitivity_gamma_b4.sh  sensitivity_gamma_c4.sh  sensitivity_gamma_d4.sh  sensitivity_guide1.sh  voronoi_vs_epsilon.sh  whisker_rowtrim.sh  whisker_trim.sh
sim/: CMakeLists.txt  README.md  convKernel.cpp  data.csv  dvanalyse.cpp  honda.cpp  james1.cpp  jamesdual.cpp  plotdat.m  randomgammas.cpp  rd_james.h  rd_james_comp14.h  rd_james_comp2.h  rd_james_comp8.h  rd_james_divnorm.h  rd_james_dncomp.h  rd_james_dncomp2.h  rd_james_dncomp_dual.h  rd_james_dncomp_pergroup.h  rd_james_norm.h  viewguidance.cpp
(+31 files in other folders)
